[gd_scene load_steps=8 format=3 uid="uid://do6k2ojgxn6cu"]

[ext_resource type="Script" path="res://Interactives/Scripts/PoopRigidBody2D.gd" id="1_4lsgn"]
[ext_resource type="Texture2D" uid="uid://p03eoyck3o0n" path="res://Interactives/poopow.png" id="2_alw4l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lcfom"]
atlas = ExtResource("2_alw4l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_whh5y"]
atlas = ExtResource("2_alw4l")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rrkv3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcfom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whh5y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rx4nu"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t6ux8"]
radius = 9.0

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 17
collision_mask = 17
gravity_scale = 0.0
can_sleep = false
lock_rotation = true
linear_damp = 3.0
script = ExtResource("1_4lsgn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -4)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_rrkv3")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rx4nu")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(2, 0)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_t6ux8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
